"Added new css class" "added so many classes on bootstrap.css

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <nav class="navbar navbar-expand-md navbar-custom fixed-top">
       
-      <a class="navbar-brand" href="#"><h1>AMOH'S</h1> </a>
+      <a class="navbar-brand" href="index.html"><h2>AMOH'S</h2> </a>
       <!-- collapse toggler -->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mycollapse">
         <span class="navbar-toggler-icon">
@@ -37,7 +37,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Recipes</a>
+            <a class="nav-link" href="recipe.html">Recipes</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Tips</a>
@@ -49,10 +49,10 @@
     
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link">Contact</a>
+            <a class="nav-link" href="signin.html">SignIn</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link">About</a>
+            <a class="nav-link" href="signup.html">SignUp</a>
           </li>
         </ul>
       </div>
@@ -112,7 +112,7 @@
     <img class="img-fluid" src="images/spice2.jpg">
   </div>
   <div class="col-lg-5 col-md-6 col-sm-6">
-    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco "</p>
+    <p class="">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco "</p>
   </div>
 </div><br><br>
 <div class="row my-second-row">
@@ -290,7 +290,7 @@
 </div>
 <!-- final div -->
 </div>
-
+<!-- <div class="overflow-hidden"> -->
 <footer class="myfooter">
 
   
@@ -329,7 +329,7 @@
 </footer>
 
 
-
+</div>
 
 
     <!-- Optional JavaScript -->
